--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>header</h1>
+			<h1>virtual pet goose</h1>
 		</header>
 			<section id="content">
 				<canvas id="VirtualPet" data-processing-sources="VirtualPet.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    by: alessandra
+		    Alessandra, APCSA
 	    </footer>
 	</body>
 </html>
